--- a/index2.html
+++ b/index2.html
@@ -196,7 +196,7 @@ video {
 </div>
 <div class="w3-content w3-container" >
   <h3 class="w3-center">Destinations</h3>
-  <p class="w3-center">Our destinations were hilltop castles and medieval villages. Lots of fun <em>Stande Bianche</em>
+  <p class="w3-center">Our destinations were hilltop castles and medieval villages. Lots of fun <em>Strade Bianche</em>
     (white gravel roads) and up and down climbing</p>
     <div class="image-gallery">
       <div class="column">
@@ -340,16 +340,16 @@ video {
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Giro d'Italia</h3>
   <p>We moved our homebase to a beach town called ViaReggio for the last few days of our trip. This is so we could catch a stage of 
-    the Giro d'Italia. The Giro is the Italian equivilent of the Tour de France.
+    the Giro d'Italia bike race. <br>
     We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
     The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
     at the table.</p>
-<em>Here is an excerpt on the history of the Hotel -</em>
-<p>Erected in 1871 along the route of the Grand Tour, it is the oldest hotel in ViaReggio.
+  Here is an excerpt on the history of the Hotel -
+<p><em>Erected in 1871 along the route of the Grand Tour, it is the oldest hotel in ViaReggio.
   Situated along the seaside promenade, the hotel is in the heart of the Art Nouveau district that arose in the early 1900s. First to find 
   shelter here were Russian expatriates, fleeing from the Tsarist Empire, followed by Russian aristocracy escaping the Bolshevik
   Revolution. Events such as these gave the hotel not only a certain number of accounts that were to go forever unpaid, but also the 
-  “de Russie” name, which it maintains to this day.
+  “de Russie” name, which it maintains to this day.</em>
 </p>
 </div>
 <div class="container" >
@@ -357,10 +357,13 @@ video {
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0612 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0612 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="Hotel Plaza de Russie" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="The 50+ kilometers of beach beautiful but weird, there is no public access at all. Access is only via one of 
+        dozens of beach clubs where you can rent a cabana or umbrella."/>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0634 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
@@ -371,7 +374,8 @@ video {
         <img src="/media/IMG_0625 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="We swapped our gravel bike for some more appropriate city crusiers" />
       </div>
     </div>
     <div class="column">
@@ -379,21 +383,25 @@ video {
         <img src="/media/IMG_0626 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0631 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0631 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="A very happy looking Lisa with two green boxes labelled Gucci" />
       </div>
     </div>
   </div>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
-  <h3 class="w3-center">Kilometer Zero</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
+  <h3 class="heading-text">Giro d'Italia Stage 12</h3>
+  <p>Giro d'Italia is a 20 day stage race that is the Italian equivilent to the Tour de France. 
+  Stage 11 of the race finished and Stage 12 started in ViaReggio. 
+  <p>
+
+  </p>
   </p>
 </div>
 <div class="video-container">
+  <h3 class="heading-text">
+    Kilometer Zero - The stage starts will a rolling start behind the official's car.
+  </h3>
   <video controls loop>
       <source src="media/My Movie 4.mov" type="video/mp4">
       Your browser does not support the video tag.
@@ -402,11 +410,8 @@ video {
 
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Maglia Rosa</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
+  <p>The Giro awards the Pink Jersey (like the Tour de France Yellow Jersey) to the overall Race Leader after every stage. 
+    This is Geraint Thomas one of my cycling heros. 
   </p>
 </div>
 <div class="video-container">
@@ -417,11 +422,8 @@ video {
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Maranello</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
+  <p>The last day of our trip was a rain day. We didn't feel like walking around Cathedrals or churchs so we made a trip up the 
+    AutoStade to Maranello, the home of Ferrari. 
   </p>
 </div>
 <div class="container" >
@@ -431,7 +433,8 @@ video {
         <img src="/media/IMG_0591 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0606 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0606 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="The F1 Ferrari driven by Gilles Villeneuve the greatest Canadian race driver." />
       </div>
     </div>
     <div class="column">
@@ -444,10 +447,12 @@ video {
     </div>
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="The 2022 SF-75 Ferrari F! car" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0610 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0610 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="The 2022 SF-75 Ferrari F! car" />
       </div>
     </div>
   </div>
