--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,7 @@ video {
 <div class="w3-content w3-container w3-padding-32" id="about">
     <h3 class="w3-center">Tuscany 2023 Trip</h3>
     <p>This trip was all about cycling the Tuscan countryside. Our homebase was Mormoraia Agriturismo in the center of Tuscany near a very cool medieval
-      village called San Gimignano.  Mormoraia is a working farm with a five star winery and olive oil production. We drank their 
+      village called San Gimignano.  Mormoraia is a working farm with a four star winery and olive oil production. We drank their 
       wine and eat their olive oil every day.
     </p>
     <p><em>Click on the photos for more details</em></p>
@@ -172,12 +172,13 @@ video {
       </div>
     </div>
 </div>
-<div class="w3-container w3-padding-16">
+<div class="w3-container w3-padding-32">
   <h3 class="w3-center">Siena</h3>
+  <p>Siena was our closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool copper etching print. Very unlike me</p>
   <div class="w3-row">
     <div class="w3-col w3-center">
-      <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" 
-      alt="Siena is the closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool art print. Very unlike me">
+      <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" onclick="onClick(this)"
+      alt="Piazza del Campo">
     </div>
   </div>
 </div>
@@ -190,8 +191,8 @@ video {
 <div class="w3-content w3-container w3-padding-32" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
   <p>We planned for five big rides heading in different directions from our base in San Gimignano. 
-     However, we were rained out a few days and settled on four long rides and a few shorter trips. We were still able
-     to clock 250 KM and 1400 M of climbing. 
+     However, we were rained out a few days and settled on four longer rides and a few shorter trips. We were still able
+     to clock 250 km and 1400 m of climbing. 
   </p>
 </div>
 <div class="w3-content w3-container" >
@@ -299,11 +300,11 @@ video {
 <div class="w3-content w3-container w3-padding-16">
   <h3 class="w3-center">Via francigena</h3>
   <p>We accidentily found ourselves following an ancient pilgrimage path called Via Francigena on some of our rides. Via Francigena runs all the way from 
-    Canterbury England to Rome. The first record of the route dates to the year 725. The churchs below were refuges for pilgrims on the way to Rome. 
+    Canterbury England to Rome. The churchs below were refuges for pilgrims on the way to Rome. We ran into lots of pilgrims hiking the trail. 
   </p>
   <p>
-    The coolest thing we found was this unmarked hidden pool just off the trail. It turned out to be "The Caldane". These are thermal baths built on 
-    a warm water spring used by the Etruscans and Romans. You can still still ceramic tiles on the bottom. 
+    The coolest thing we found was this unmarked hidden pool just off the trail. It turned out to be "The Caldane". These are the remains of a roman bathhouse built on 
+    a warm water mineral spring. You can still still ceramic tiles on the bottom. 
     The baths were destroyed in 1200 by invading troops. Wikipedia says locals still use the pools for their healing powers. 
   </p>
 </div>
@@ -362,7 +363,7 @@ video {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="The 50+ kilometers of beach beautiful but weird, there is no public access at all. Access is only via one of 
+        alt="The 50+ kilometers of beach is beautiful but weird, there is no public access at all. Access is only via one of 
         dozens of beach clubs where you can rent a cabana or umbrella."/>
       </div>
       <div class="image-item">
@@ -400,7 +401,7 @@ video {
 </div>
 <div class="video-container">
   <h3 class="heading-text">
-    Kilometer Zero - The stage starts will a rolling start behind the official's car.
+    Kilometer Zero - A stage starts will a rolling start behind the official's car.
   </h3>
   <video controls loop>
       <source src="media/My Movie 4.mov" type="video/mp4">
@@ -448,11 +449,11 @@ video {
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="The 2022 SF-75 Ferrari F! car" />
+        alt="The 2022 SF-75 Ferrari F1 car" />
       </div>
       <div class="image-item">
         <img src="/media/IMG_0610 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="The 2022 SF-75 Ferrari F! car" />
+        alt="The 2022 SF-75 Ferrari F1 car" />
       </div>
     </div>
   </div>
