--- a/index2.html
+++ b/index2.html
@@ -174,12 +174,15 @@ video {
 </div>
 <div class="w3-container w3-padding-32">
   <h3 class="w3-center">Siena</h3>
-  <p>Siena was our closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool copper etching print. Very unlike me</p>
-  <div class="w3-row">
-    <div class="w3-col w3-center">
-      <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" onclick="onClick(this)"
-      alt="Piazza del Campo">
-    </div>
+  <p>Siena was our closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool copper etching print. 
+    Lisa waited until ViaReggio to spend her pennies, see the picture in that section to guess what she bought.<br>
+    <em>Click on the panorama to be able to zoom around Del Campo</em>
+  </p>
+</div>
+<div class="w3-row ">
+  <div class="w3-col w3-center">
+    <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" onclick="onClick(this)"
+    alt="Piazza del Campo">
   </div>
 </div>
 <!-- Second Parallax Image with Portfolio Text -->
@@ -222,8 +225,8 @@ video {
 </div>
 <!-- Google Map -->
 <div class="w3-content w3-container w3-padding-32">
-  <h3 class="w3-center">Here is a map of all the locations we visited in Tuscany on our Bikes</h3>
-  <p class="w3-center"><em>Use Two Fingers to Pan and Zoom</em></p>
+  <h3 class="w3-center">Bike Map</h3>
+  <p class="w3-center">This map shows the locations we visited on our trip.<br><em>Use Two Fingers to Pan and Zoom</em></p>
   <div class="google-maps">
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" 
           width="640" height="480" frameborder="0" style="border:0">
@@ -269,7 +272,7 @@ video {
 
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0543 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0555 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
     </div>
@@ -352,6 +355,8 @@ video {
   Revolution. Events such as these gave the hotel not only a certain number of accounts that were to go forever unpaid, but also the 
   “de Russie” name, which it maintains to this day.</em>
 </p>
+<p>There must be 50+ kilometers of white sand beach stretching north from ViaReggio, weirdly for us there is no public access at all. Access is only via one of 
+  dozens of beach clubs where you can rent a cabana or umbrella.</p>
 </div>
 <div class="container" >
   <h2 class="heading-text">ViaReggio</h2>
@@ -400,24 +405,24 @@ video {
   </p>
 </div>
 <div class="video-container">
-  <h3 class="heading-text">
-    Kilometer Zero - A stage starts will a rolling start behind the official's car.
-  </h3>
+  <p class="heading-text">
+    Kilometer Zero - A race stage starts with a rolling start behind the official's car.
+  </p>
   <video controls loop>
-      <source src="media/My Movie 4.mov" type="video/mp4">
+      <source src="media/My Movie 4.mov" type="video/mp4" preload="auto">
       Your browser does not support the video tag.
   </video>
 </div>
 
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Maglia Rosa</h3>
-  <p>The Giro awards the Pink Jersey (like the Tour de France Yellow Jersey) to the overall Race Leader after every stage. 
+  <p>The Giro awards the Pink Jersey (like the Yellow Jersey but Italian) to the overall Race Leader after every stage. 
     This is Geraint Thomas one of my cycling heros. 
   </p>
 </div>
 <div class="video-container">
   <video controls>
-      <source src="media/My Movie 3.mov" type="video/mp4">
+      <source src="media/My Movie 3.mov" type="video/mp4" preload="auto">
       Your browser does not support the video tag.
   </video>
 </div>
@@ -443,12 +448,12 @@ video {
         <img src="/media/IMG_0599 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0608 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
     </div>
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        <img src="/media/IMG_0608 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
         alt="The 2022 SF-75 Ferrari F1 car" />
       </div>
       <div class="image-item">
