--- a/index2.html
+++ b/index2.html
@@ -172,14 +172,14 @@ video {
       </div>
     </div>
 </div>
-<div class="w3-container w3-padding-32">
+<div class="w3-container w3-content">
   <h3 class="w3-center">Siena</h3>
   <p>Siena was our closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool copper etching print. 
     Lisa waited until ViaReggio to spend her pennies, see the picture in that section to guess what she bought.<br>
     <em>Click on the panorama to be able to zoom around Del Campo</em>
   </p>
 </div>
-<div class="w3-row ">
+<div class="w3-row w3 w3-padding-32">
   <div class="w3-col w3-center">
     <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" onclick="onClick(this)"
     alt="Piazza del Campo">
@@ -191,11 +191,11 @@ video {
     <span class="w3-xxlarge w3-text-white w3-wide">RIDES</span>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-32" id="rides">
+<div class="w3-content w3-container w3-padding-16" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
-  <p>We planned for five big rides heading in different directions from our base in San Gimignano. 
+  <p>We planned for six big rides heading in different directions from our base in San Gimignano. 
      However, we were rained out a few days and settled on four longer rides and a few shorter trips. We were still able
-     to clock 250 km and 1400 m of climbing. 
+     to clock about 250 km and 1400 m of climbing. 
   </p>
 </div>
 <div class="w3-content w3-container" >
@@ -341,10 +341,11 @@ video {
     <span class="w3-xxlarge w3-text-white w3-wide">GIRO</span>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64" id="giro">
+<div class="w3-content w3-container w3-padding-32" id="giro">
   <h3 class="w3-center">Giro d'Italia</h3>
   <p>We moved our homebase to a beach town called ViaReggio for the last few days of our trip. This is so we could catch a stage of 
-    the Giro d'Italia bike race. <br>
+    the Giro d'Italia bike race. Giro d'Italia is a 20 day stage race that is the Italian equivilent to the Tour de France. 
+    Stage 11 of the race finished and Stage 12 started in ViaReggio. <br>
     We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
     The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
     at the table.</p>
@@ -396,18 +397,11 @@ video {
   </div>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
-  <h3 class="heading-text">Giro d'Italia Stage 12</h3>
-  <p>Giro d'Italia is a 20 day stage race that is the Italian equivilent to the Tour de France. 
-  Stage 11 of the race finished and Stage 12 started in ViaReggio. 
-  <p>
-
-  </p>
+  <h3 class="w3-center">Kilometer Zero</h3>
+  <p>A race stage starts with a rolling start behind the official's car. 
   </p>
 </div>
 <div class="video-container">
-  <p class="heading-text">
-    Kilometer Zero - A race stage starts with a rolling start behind the official's car.
-  </p>
   <video controls loop>
       <source src="media/My Movie 4.mov" type="video/mp4" preload="auto">
       Your browser does not support the video tag.
@@ -426,10 +420,10 @@ video {
       Your browser does not support the video tag.
   </video>
 </div>
-<div class="w3-content w3-container w3-padding-64" id="giro">
+<div class="w3-content w3-container w3-padding-32" id="giro">
   <h3 class="w3-center">Maranello</h3>
   <p>The last day of our trip was a rain day. We didn't feel like walking around Cathedrals or churchs so we made a trip up the 
-    AutoStade to Maranello, the home of Ferrari. 
+    AutoStade to Maranello, The home of Ferrari. 
   </p>
 </div>
 <div class="container" >
