--- a/index2.html
+++ b/index2.html
@@ -301,7 +301,7 @@ video {
   </div>
 </div>
 <div class="w3-content w3-container w3-padding-16">
-  <h3 class="w3-center">Via francigena</h3>
+  <h3 class="w3-center">Via Francigena</h3>
   <p>We accidentily found ourselves following an ancient pilgrimage path called Via Francigena on some of our rides. Via Francigena runs all the way from 
     Canterbury England to Rome. The churchs below were refuges for pilgrims on the way to Rome. We ran into lots of pilgrims hiking the trail. 
   </p>
@@ -345,19 +345,19 @@ video {
   <h3 class="w3-center">Giro d'Italia</h3>
   <p>We moved our homebase to a beach town called ViaReggio for the last few days of our trip. This is so we could catch a stage of 
     the Giro d'Italia bike race. Giro d'Italia is a 20 day stage race that is the Italian equivilent to the Tour de France. 
-    Stage 11 of the race finished and Stage 12 started in ViaReggio. <br>
-    We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
-    The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
-    at the table.</p>
+    Stage 11 of the race finished and Stage 12 started in ViaReggio. </p>
+  <p>We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
+  The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
+  at the table.
+  </p>
   Here is an excerpt on the history of the Hotel -
-<p><em>Erected in 1871 along the route of the Grand Tour, it is the oldest hotel in ViaReggio.
+  <p><em>Erected in 1871 along the route of the Grand Tour, it is the oldest hotel in ViaReggio.
   Situated along the seaside promenade, the hotel is in the heart of the Art Nouveau district that arose in the early 1900s. First to find 
   shelter here were Russian expatriates, fleeing from the Tsarist Empire, followed by Russian aristocracy escaping the Bolshevik
   Revolution. Events such as these gave the hotel not only a certain number of accounts that were to go forever unpaid, but also the 
   “de Russie” name, which it maintains to this day.</em>
-</p>
-<p>There must be 50+ kilometers of white sand beach stretching north from ViaReggio, weirdly for us there is no public access at all. Access is only via one of 
-  dozens of beach clubs where you can rent a cabana or umbrella.</p>
+  </p>
+
 </div>
 <div class="container" >
   <h2 class="heading-text">ViaReggio</h2>
