--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@ video {
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="" />
+        alt="We are smiling because we've been out in the rain all day and am getting close to civilization again" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0561 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0561 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="We are smiling because we've been out in the rain all day and am getting close to civilization again" />
 
       </div>
       <div class="image-item">
