minor text, done

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ video {
 <div class="w3-content w3-container w3-padding-32" id="about">
     <h3 class="w3-center">Tuscany 2023 Trip</h3>
     <p>This trip was all about cycling the Tuscan countryside. Our homebase was Mormoraia Agriturismo in the center of Tuscany near a very cool medieval
-      village called San Gimignano.  Mormoraia is a working farm with a four star winery and olive oil production. We drank their 
+      village called San Gimignano.  Mormoraia is a working farm with an excellent winery and olive oil production. We drank their 
       wine and eat their olive oil every day.
     </p>
     <p><em>Click on the photos for more details</em></p>
@@ -174,8 +174,7 @@ video {
 </div>
 <div class="w3-container w3-content">
   <h3 class="w3-center">Siena</h3>
-  <p>Siena was our closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool copper etching print. 
-    Lisa waited until ViaReggio to spend her pennies, see the picture in that section to guess what she bought.<br>
+  <p>Siena was the closest city. Lots to see and great shopping. <br>
     <em>Click on the panorama to be able to zoom around Del Campo</em>
   </p>
 </div>
@@ -193,8 +192,8 @@ video {
 </div>
 <div class="w3-content w3-container w3-padding-16" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
-  <p>We planned for six big rides heading in different directions from our base in San Gimignano. 
-     However, we were rained out a few days and settled on four longer rides and a few shorter trips. We were still able
+  <p>We planned for many rides heading in different directions from our base in San Gimignano. 
+     However, we were rained out a few days and managed four long rides and a few shorter trips. We were still able
      to clock about 250 km and 1400 m of climbing. 
   </p>
 </div>
@@ -309,7 +308,7 @@ video {
   <p>
     The coolest thing we found was this unmarked hidden pool just off the trail. It turned out to be "The Caldane". These are the remains of a roman bathhouse built on 
     a warm water mineral spring. You can still still ceramic tiles on the bottom. 
-    The baths were destroyed in 1200 by invading troops. Wikipedia says locals still use the pools for their healing powers. 
+    The baths were destroyed in 1200 by invading troops. Wikipedia says locals still visit the pools for their healing powers. 
   </p>
 </div>
 <div class="w3-container w3-content w3-padding-32">
@@ -348,7 +347,7 @@ video {
     the Giro d'Italia bike race. Giro d'Italia is a 20 day stage race that is the Italian equivilent to the Tour de France. 
     Stage 11 of the race finished and Stage 12 started in ViaReggio. </p>
   <p>We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
-  The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
+  The breakfast experience exemplified the type of place it was. For instance if the lady had a purse they would setup a "purse chair" for it
   at the table.
   </p>
   Here is an excerpt on the history of the Hotel -
@@ -435,7 +434,7 @@ video {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0606 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="The F1 Ferrari driven by Gilles Villeneuve the greatest Canadian race driver." />
+        alt="The F1 Ferrari driven by Gilles Villeneuve the greatest canadian race driver." />
       </div>
     </div>
     <div class="column">
