--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ video {
       village called San Gimignano.  Mormoraia is a working farm with an excellent winery and olive oil production. We drank their 
       wine and eat their olive oil every day.
     </p>
-    <p><em>Click on the photos for more details</em></p>
+    <p><em>Please click on any of the photos to zoom and to read more details for some</em></p>
 </div>
 <div class="w3-container w3-content">
     <div class="image-gallery">
@@ -193,8 +193,8 @@ video {
 <div class="w3-content w3-container w3-padding-16" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
   <p>We planned for many rides heading in different directions from our base in San Gimignano. 
-     However, we were rained out a few days and managed four long rides and a few shorter trips. We were still able
-     to clock about 250 km and 1400 m of climbing. 
+     However, we were rained out a few days but did manage four long rides and a few shorter trips. We 
+     clocked about 250 km and 1400 m of climbing. 
   </p>
 </div>
 <div class="w3-content w3-container" >
@@ -208,15 +208,15 @@ video {
           alt="Lago di Chiusi (We got lost twice and didn't make it to our planned goal of Cortona)" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0812 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Casole d' Elsa" />
+          <img src="/media/IMG_0812 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Val d'Elsa on our way to Scorgiano" />
         </div>
       </div>
       <div class="column">
         <div class="image-item">
-          <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Scorgiano" />
+          <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Monteriggoni" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Castel Pietralo" />
+          <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Casole d'Elsa" />
         </div>
       </div>
     </div>
@@ -307,7 +307,7 @@ video {
   </p>
   <p>
     The coolest thing we found was this unmarked hidden pool just off the trail. It turned out to be "The Caldane". These are the remains of a roman bathhouse built on 
-    a warm water mineral spring. You can still still ceramic tiles on the bottom. 
+    a warm water mineral spring. You can still see ceramic tiles on the bottom. 
     The baths were destroyed in 1200 by invading troops. Wikipedia says locals still visit the pools for their healing powers. 
   </p>
 </div>
@@ -369,7 +369,7 @@ video {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="The 50+ kilometers of beach is beautiful but weird, there is no public access at all. Access is only via one of 
+        alt="The 30+ kilometers of beach is beautiful but weird, there is no public access at all. Access is only via one of 
         dozens of beach clubs where you can rent a cabana or umbrella."/>
       </div>
       <div class="image-item">
@@ -382,7 +382,7 @@ video {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-        alt="We swapped our gravel bike for some more appropriate city crusiers" />
+        alt="We swapped our gravel bikes for some more appropriate city crusiers" />
       </div>
     </div>
     <div class="column">
